--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -21,5 +21,10 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11"
+  },
+
+  "resolutions": {
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   }
 }
