--- a/pie-web/public/admin/config.yml
+++ b/pie-web/public/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: "git-gateway" # Use Git Gateway for authentication
-  branch: "main" # The branch where the content will be stored
+  name: "github" # Use Git Gateway for authentication
+  branch: "main" # The branch where the content will be stored'
+  repo: "PieDevStudios/pie-web" # The GitHub repository where the content is stored
 
 media_folder: "src/assets" # Location where files will be stored in the repo
 public_folder: "src/assets" # The src attribute for uploaded media
