--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -10,8 +10,16 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.5.3",
+    "@astrojs/react": "^4.3.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "astro": "^5.12.3",
     "decap-cms-app": "^3.8.2",
-    "react-router-dom": "^7.7.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.1",
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11"
   }
 }
