--- a/pie-web/public/admin/config.yml
+++ b/pie-web/public/admin/config.yml
@@ -21,13 +21,13 @@ logo_url: https://decapbridge.com/decapcms-with-bridge.svg
 # Add site links in DecapCMS (optional)
 site_url: https://pie-web.netlify.app
 
-media_folder: "src/assets" # Location where files will be stored in the repo
-public_folder: "src/assets" # The src attribute for uploaded media
+media_folder: "pie-web/src/assets" # Location where files will be stored in the repo
+public_folder: "pie-web/src/assets" # The src attribute for uploaded media
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "src/pages/blog" # The path to the folder where the documents are stored
+    folder: "pie-web/src/pages/content" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
