--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
+    "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.1.0",
