--- a/pie-web/public/admin/config.yml
+++ b/pie-web/public/admin/config.yml
@@ -27,7 +27,7 @@ public_folder: "pie-web/public//assets" # The src attribute for uploaded media
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "pie-web/src/pages/content" # The path to the folder where the documents are stored
+    folder: "pie-web/src/pages/blogs" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
@@ -35,3 +35,17 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "thumbnail", widget: "image" } 
       - { label: "Body", name: "body", widget: "markdown" }
+  - name: posts
+    label: Posts
+    label_singular: 'Post'
+    folder: content/posts
+    path: '{{slug}}/index'
+    media_folder: ''
+    public_folder: ''
+    fields:
+      - label: Title
+        name: title
+        widget: string
+      - label: 'Cover Image'
+        name: 'image'
+        widget: 'image'
