--- a/pie-web/public/admin/config.yml
+++ b/pie-web/public/admin/config.yml
@@ -25,7 +25,7 @@ media_folder: "pie-web/public/assets" # Location where files will be stored in t
 public_folder: "pie-web/public//assets" # The src attribute for uploaded media
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
+  - name: "blog" # Used in routes
     label: "Blog" # Used in the UI
     folder: "pie-web/src/pages/blogs" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
@@ -35,17 +35,14 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "thumbnail", widget: "image" } 
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: posts
-    label: Posts
-    label_singular: 'Post'
-    folder: content/posts
-    path: '{{slug}}/index'
-    media_folder: ''
-    public_folder: ''
-    fields:
-      - label: Title
-        name: title
-        widget: string
-      - label: 'Cover Image'
-        name: 'image'
-        widget: 'image'
+  - name: "games" # Used in routes
+    label: "Games" # Used in the UI
+    folder: "pie-web/src/pages/games" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields for each document, usually in frontmatter
+      - { label: "Layout", name: "layout", widget: "hidden", default: "games" }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Trailer", name: "trailer", widget: "string", required: false  }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" } 
+      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Image Carousel", name: "images", widget: "image", allow_multiple: true, required: false }
