--- a/pie-web/public/admin/config.yml
+++ b/pie-web/public/admin/config.yml
@@ -49,4 +49,4 @@ collections:
       - { label: "Description", name: "description", widget: "markdown" }
       - { label: "Features", name: "features", widget: "markdown" }
       - { label: "Showcase Images", name: "images", widget: "list", fields: [ { label: "Image", name: "image", widget: "image" } ] }
-      - { label: "Image Carousel", name: "imageCarousel", widget: "image", fields: [ { label: "Image", name: "image", widget: "image" } ] }
+      - { label: "Image Carousel", name: "imageCarousel", widget: "list", fields: [ { label: "Image", name: "image", widget: "image" } ] }
