--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.1.0",
