--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -23,6 +23,8 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
