--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -6,8 +6,8 @@
   "homepage": "https://kaleyvuong.github.io/PieDevStudios",
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "predeploy": "rm -rf dist && vite build",
+    "deploy": "gh-pages --dist dist --clean --no-push --dotfiles",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
