--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -9,7 +9,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist ",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -37,5 +36,9 @@
     "@vitejs/plugin-react": "^4.7.0",
     "globals": "^16.3.0",
     "vite": "^7.1.1"
-  }
+  },
+  "browser":{
+    "child_process": false
+  }  
+
 }
