--- a/pie-web/package.json
+++ b/pie-web/package.json
@@ -34,11 +34,11 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.1"
   },
-  "browser":{
+  "browser": {
     "child_process": false
-  }  
-
+  }
 }
